// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferenceItem does not render misc if title present 1`] = `
<Item>
  <Row
    align="middle"
    gutter={24}
    justify="start"
    type="flex"
  >
    <Col />
    <Meta
      description={
        <Unknown>
          <AuthorList
            authors={
              Immutable.List [
              ]
            }
            enableShowAll={false}
            forSupervisors={false}
            limit={5}
            recordId={undefined}
            total={-1}
            wrapperClassName={null}
          />
          <ul
            className="bulleted-inline-list secondary"
          >
            
          </ul>
        </Unknown>
      }
      title={
        <span
          className="f5"
        >
          Title
        </span>
      }
    />
  </Row>
</Item>
`;

exports[`ReferenceItem renders misc if present 1`] = `
<Item>
  <Row
    align="middle"
    gutter={24}
    justify="start"
    type="flex"
  >
    <Col />
    <Meta
      description={
        <Unknown>
          <span>
            A Misc
          </span>
          <AuthorList
            authors={
              Immutable.List [
              ]
            }
            enableShowAll={false}
            forSupervisors={false}
            limit={5}
            recordId={undefined}
            total={-1}
            wrapperClassName={null}
          />
          <ul
            className="bulleted-inline-list secondary"
          >
            
          </ul>
        </Unknown>
      }
      title={null}
    />
  </Row>
</Item>
`;

exports[`ReferenceItem renders unlinked reference (no control_number) 1`] = `
<div
  className="ant-list-item"
>
  <div
    className="ant-list-item-content ant-list-item-content-single"
  >
    <Row
      align="middle"
      gutter={24}
      justify="start"
      type="flex"
    >
      <Col />
      <Meta
        description={
          <Unknown>
            <AuthorList
              authors={
                Immutable.List [
                  Immutable.Map {
                    full_name: "Author",
                  },
                ]
              }
              enableShowAll={false}
              forSupervisors={false}
              limit={5}
              recordId={undefined}
              total={-1}
              wrapperClassName={null}
            />
            <ul
              className="bulleted-inline-list secondary"
            >
              <li
                className="dib mr1"
              >
                <PublicationInfoList
                  labeled={false}
                  publicationInfo={
                    Immutable.List [
                      Immutable.Map {
                        journal_title: "Journal",
                      },
                    ]
                  }
                  wrapperClassName="di"
                />
              </li>
              <li
                className="dib mr1"
              >
                <DOIList
                  dois={
                    Immutable.List [
                      Immutable.Map {
                        value: "123456.12345",
                      },
                    ]
                  }
                  wrapperClassName="di"
                />
              </li>
              <li
                className="dib mr1"
              >
                <URLList
                  urls={
                    Immutable.List [
                      Immutable.Map {
                        value: "https://dude.guy",
                      },
                    ]
                  }
                  wrapperClassName="di"
                />
              </li>
            </ul>
          </Unknown>
        }
        title={
          <span
            className="f5"
          >
            Title
          </span>
        }
      />
    </Row>
  </div>
</div>
`;

exports[`ReferenceItem renders with full reference 1`] = `
<div
  className="ant-list-item"
>
  <div
    className="ant-list-item-content ant-list-item-content-single"
  >
    <Row
      align="middle"
      gutter={24}
      justify="start"
      type="flex"
    >
      <Col>
        [123] 
      </Col>
      <Meta
        description={
          <Unknown>
            <AuthorList
              authors={
                Immutable.List [
                  Immutable.Map {
                    full_name: "Author",
                  },
                ]
              }
              enableShowAll={false}
              forSupervisors={false}
              limit={5}
              recordId={12345}
              total={-1}
              wrapperClassName={null}
            />
            <ul
              className="bulleted-inline-list secondary"
            >
              <li
                className="dib mr1"
              >
                <PublicationInfoList
                  labeled={false}
                  publicationInfo={
                    Immutable.List [
                      Immutable.Map {
                        journal_title: "Journal",
                      },
                    ]
                  }
                  wrapperClassName="di"
                />
              </li>
              <li
                className="dib mr1"
              >
                <DOIList
                  dois={
                    Immutable.List [
                      Immutable.Map {
                        value: "123456.12345",
                      },
                    ]
                  }
                  wrapperClassName="di"
                />
              </li>
              <li
                className="dib mr1"
              >
                <URLList
                  urls={
                    Immutable.List [
                      Immutable.Map {
                        value: "https://dude.guy",
                      },
                    ]
                  }
                  wrapperClassName="di"
                />
              </li>
            </ul>
          </Unknown>
        }
        title={
          <Link
            className="f5"
            replace={false}
            to="/literature/12345"
          >
            <Latex>
              Title
            </Latex>
          </Link>
        }
      />
    </Row>
  </div>
</div>
`;
